--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 #clear-colored-squares-btn,
 #reset-visualization-btn,
 #fill-color-toggle,
+#square-numbers-toggle,
 #visualize-toggle,
 #odd-counter-group,
 #even-counter-group,
@@ -75,4 +76,7 @@
     height: 100px;
     background-color: rgb(248, 248, 241);
     border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
